k8s/04-db-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: nagp-assignment
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
