k8s/06-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-api
  namespace: nagp-assignment
spec:
  type: ClusterIP
  selector:
    app: products-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
